Rework of wizard
