# server/openapi.yaml
@@ -149,6 +149,39 @@ paths:
                   $ref: '#/components/schemas/ActionRunStreamData'
         default:
           $ref: '#/components/responses/DefaultError'
+  /wizard:
+    get:
+      summary: Lists all wizards
+      description: |
+        Returns all multistep actions
+      operationId: getWizards
+      responses:
+        '200':
+          description: wizards response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WizardShort'
+        default:
+          $ref: '#/components/responses/DefaultError'
+  /wizard/{id}:
+    get:
+      summary: Returns wizard by id
+      description: returns wizard by id
+      operationId: getWizardByID
+      parameters:
+        - $ref: '#/components/parameters/WizardId'
+      responses:
+        '200':
+          description: wizard response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WizardFull'
+        default:
+          $ref: '#/components/responses/DefaultError'
 components:
   responses:
     DefaultError:
@@ -186,6 +219,13 @@ components:
         type: integer
         minimum: 1
         maximum: 100
+    WizardId:
+      name: id
+      in: path
+      description: ID of wizard to fetch
+      required: true
+      schema:
+        type: string
   schemas:
     Customisation:
       type: object
@@ -288,3 +328,30 @@ components:
           format: int32
         message:
           type: string
+    WizardShort:
+      allOf:
+        - type: object
+          required:
+            - id
+            - title
+            - description
+          properties:
+            id:
+              type: string
+              x-go-name: "ID"
+            title:
+              type: string
+            description:
+              type: string
+    WizardFull:
+      allOf:
+        - $ref: '#/components/schemas/WizardShort'
+        - type: object
+          required:
+            - jsonschema
+          properties:
+            steps:
+              type: array
+              items:
+                $ref: '#/components/schemas/ActionFull'
+
